fixed view on iphone se

--- a/client/src/components/Cart/style.css
+++ b/client/src/components/Cart/style.css
@@ -61,6 +61,6 @@
 }
 
 .cart-items-container {
-  max-height: 70vh;
+  max-height: 60vh;
   overflow-y: scroll;
 }
